feat(IdentityProvider): 重构身份提供商管理页面
- 新增 CreateIdP 组件，支持创建 OIDC 和 Script 类型的提供商- 新增 EditIdP 组件，用于编辑提供商配置
- 新增 IdPExplorer 组件，替代原有的 IdPMenu
- 新增 IdPView 组件，用于查看提供商详情
- 新增 OIDCIdPForm 和 ScriptIdPForm 组件，用于配置 OIDC 和 Script 类型的提供商
-重构 IdentityProvider 页面，优化布局和交互
- 移除未使用的样式文件

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -192,6 +192,8 @@
   "idp_discovery_endpoint": "Discovery endpoint",
   "idp_client_id": "Client ID",
   "idp_client_secret": "Client Secret",
+  "idp_script": "Script",
+  "idp_script_tooltip": "Write JavaScript for authentication, export authenticate(request)",
   "idp_step_select_provider": "Select provider",
   "idp_step_create_provider": "Create provider",
   "idp_step_success": "Success",
