feat(i18n): 优化国际化文案并新增多个功能模块的翻译
- 移除了"Parent Folder"的英文翻译
- 新增了多个功能模块的中英文翻译,包括:
  - 服务编排(Flow)
  - 数据源管理(DataSource)
  - ER图(ERDiagram)
  - GraphQL API
  - 用户自定义API
- 优化了部分现有文案的翻译

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -281,7 +281,6 @@
   "forgot_password": "Forgot password?",
   "demo_credentials": "Demo: admin / admin123",
   "demo_login_button": "Login with Demo Account",
-  "parent_folder": "Parent Folder",
   "api_config": "API Configuration",
   "request_method": "Request Method",
   "api_address": "API Address",
@@ -326,5 +325,39 @@
     "select_code_template": "Select Code Template",
     "regenerate": "Regenerate",
     "download_source": "Download Source"
-  }
+  },
+  "flow": "Flow",
+  "flow_title": "Flow",
+  "flow_description": "Here you can create and manage various business processes and data processing flows",
+  "flow_features": "Features",
+  "flow_feature_1": "Visual flow design",
+  "flow_feature_2": "Flow execution monitoring",
+  "flow_feature_3": "Flow version management",
+  "flow_feature_4": "Flow performance analysis",
+  "database_type_required": "Database type cannot be empty",
+  "database_url_required": "Database connection URL cannot be empty",
+  "root_directory": "Root Directory",
+  "unknown_directory": "Unknown Directory",
+  "graphql_endpoint_config": "GraphQL Endpoint Configuration",
+  "graphql_endpoint_path_required": "Please enter GraphQL endpoint path",
+  "graphql_endpoint_full_address": "Full address: {{path}}[endpoint path]",
+  "identity_provider_help": "You can select an identity provider for access control",
+  "select_identity_provider": "Select Identity Provider",
+  "config_save_success": "Configuration saved successfully",
+  "config_save_failed": "Failed to save configuration",
+  "config_load_failed": "Failed to load configuration",
+  "identity_provider_load_failed": "Failed to load identity providers",
+  "zoom_in": "Zoom In",
+  "zoom_out": "Zoom Out",
+  "fullscreen": "Fullscreen",
+  "exit_fullscreen": "Exit Fullscreen",
+  "get_datasource_list_failed": "Failed to get datasource list",
+  "get_datasource_list_failed_desc": "Please check network connection or contact administrator",
+  "get_model_list_failed": "Failed to get model list",
+  "get_model_list_failed_desc": "Please check datasource connection or contact administrator",
+  "create_model_failed": "Failed to create model",
+  "cleanup_graph_error": "Error cleaning up graph instance",
+  "cleanup_graph_error_unmount": "Error cleaning up graph instance on component unmount",
+  "chinese": "中文",
+  "english": "English"
 }
