--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -281,7 +281,6 @@
   "forgot_password": "忘记密码？",
   "demo_credentials": "演示账号：admin / admin123",
   "demo_login_button": "使用演示账号登录",
-  "parent_folder": "上级目录",
   "api_config": "接口配置",
   "request_method": "请求方法",
   "api_address": "接口地址",
@@ -326,5 +325,39 @@
     "select_code_template": "选择代码模板",
     "regenerate": "重新生成",
     "download_source": "下载源码"
-  }
+  },
+  "flow": "服务编排",
+  "flow_title": "服务编排",
+  "flow_description": "在这里您可以创建和管理各种业务流程和数据处理流程",
+  "flow_features": "功能特性",
+  "flow_feature_1": "可视化流程设计",
+  "flow_feature_2": "流程执行监控",
+  "flow_feature_3": "流程版本管理",
+  "flow_feature_4": "流程性能分析",
+  "database_type_required": "数据库类型不能为空",
+  "database_url_required": "数据库连接URL不能为空",
+  "root_directory": "根目录",
+  "unknown_directory": "未知目录",
+  "graphql_endpoint_config": "GraphQL 端点配置",
+  "graphql_endpoint_path_required": "请输入 GraphQL 端点路径",
+  "graphql_endpoint_full_address": "完整地址: {{path}}[端点路径]",
+  "identity_provider_help": "可选择身份提供商进行访问控制",
+  "select_identity_provider": "选择身份提供商",
+  "config_save_success": "配置保存成功",
+  "config_save_failed": "保存配置失败",
+  "config_load_failed": "加载配置失败",
+  "identity_provider_load_failed": "加载身份提供商失败",
+  "zoom_in": "放大",
+  "zoom_out": "缩小",
+  "fullscreen": "全屏",
+  "exit_fullscreen": "退出全屏",
+  "get_datasource_list_failed": "获取数据源列表失败",
+  "get_datasource_list_failed_desc": "请检查网络连接或联系管理员",
+  "get_model_list_failed": "获取模型列表失败",
+  "get_model_list_failed_desc": "请检查数据源连接或联系管理员",
+  "create_model_failed": "创建模型失败",
+  "cleanup_graph_error": "清理图形实例时出错",
+  "cleanup_graph_error_unmount": "组件卸载时清理图形实例出错",
+  "chinese": "中文",
+  "english": "English"
 }
