feat(components): 优化标签页容器组件并添加国际化支持
-调整 TabPageContainer 组件的样式和布局
- 添加刷新标签页功能
- 实现全屏和退出全屏功能
- 更新国际化文件，添加相关翻译

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -359,5 +359,6 @@
   "cleanup_graph_error": "Error cleaning up graph instance",
   "cleanup_graph_error_unmount": "Error cleaning up graph instance on component unmount",
   "chinese": "中文",
-  "english": "English"
+  "english": "English",
+  "refresh_tab": "Refresh Tab"
 }
