refactor(components): 简化 TabMenu 和 TabPageContainer 组件
- 移除了 TabMenu组件的 compact 属性
-移除了 TabPageContainer 组件的多个未使用的属性
-调整了相关页面组件中 TabPageContainer 的使用方式
- 更新了中英文翻译文件，为 API 详情页面添加了新的翻译项

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -291,6 +291,7 @@
   "graphql_query": "GraphQL Query",
   "create_failed": "Creation failed",
   "api_detail": {
+    "title": "API detail",
     "select_api_to_view": "Please select an API to view details",
     "api_id": "API ID",
     "status": "Status",
