refactor(components): 重构 TabPageContainer 组件
- 移除了不必要的嵌套 div 结构，简化了组件的渲染结构
-将 TabMenu 组件直接渲染在最外层 div 内，避免了额外的包装层级
-优化了样式设置和组件属性的传递方式

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -361,5 +361,14 @@
   "cleanup_graph_error_unmount": "Error cleaning up graph instance on component unmount",
   "chinese": "中文",
   "english": "English",
-  "refresh_tab": "Refresh Tab"
+  "refresh_tab": "Refresh Tab",
+  "explore": {
+    "download": "Download",
+    "copy": "Copy",
+    "copied": "Copied!",
+    "preview": "Preview",
+    "view_source": "View source",
+    "could_not_load_zip": "Could not load the ZIP project.",
+    "could_not_read_zip": "Could not read the ZIP project."
+  }
 }
