refactor(layout): 重构页面布局并添加通用容器组件
- 新增 PageContainer 组件用于统一页面布局
- 更新多个页面的结构，使用新的 PageContainer 组件- 调整侧边栏和内容区域的样式
-统一标题和操作按钮的样式
- 优化部分组件的导入和使用

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,6 +5,9 @@
   "api_log": "API Log",
   "user_define_api": "User Define API",
   "graphql_api": "GraphQL",
+  "graphql_endpoint": "Endpoint",
+  "graphql_settings": "Settings",
+  "graphql_api_title": "GraphQL API",
   "data": "Data",
   "data_source": "Data source",
   "data_modeling": "Data modeling",
@@ -370,5 +373,9 @@
     "view_source": "View source",
     "could_not_load_zip": "Could not load the ZIP project.",
     "could_not_read_zip": "Could not read the ZIP project."
-  }
+  },
+  "identity_provider_delete_success": "Deleted successfully",
+  "identity_provider_delete_failed": "Failed to delete provider",
+  "identity_provider_delete_confirm": "Delete '{{name}}'?",
+  "identity_provider_delete_confirm_desc": "Are you sure you want to delete <strong>{{name}}</strong>?"
 }
