feat(i18n): 优化国际化文案并新增通用加载中提示
- 在 PageContainer 组件中添加国际化支持，替换加载中提示文案
- 更新英文和中文语言包，新增多个通用错误提示和操作成功提示
- 修改 DataSource 和 UserDefineAPI 页面中的部分文案，使用国际化支持
- 优化 Splitter 组件的样式，调整面板间距

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -377,5 +377,18 @@
   "identity_provider_delete_success": "Deleted successfully",
   "identity_provider_delete_failed": "Failed to delete provider",
   "identity_provider_delete_confirm": "Delete '{{name}}'?",
-  "identity_provider_delete_confirm_desc": "Are you sure you want to delete <strong>{{name}}</strong>?"
+  "identity_provider_delete_confirm_desc": "Are you sure you want to delete <strong>{{name}}</strong>?",
+  "failed_to_load_datasource_list": "Failed to load datasource list.",
+  "type_label": "Type",
+  "connection_name_required": "Please enter connection name",
+  "connection_name_placeholder": "Please enter connection name",
+  "delete_datasource_confirm": "Delete '{{name}}'?",
+  "delete_datasource_confirm_desc": "Are you sure you want to delete <strong>{{name}}</strong>?",
+  "delete_datasource_success": "Deleted successfully",
+  "delete_datasource_failed": "Failed to delete datasource",
+  "export_models_title": "Export {{name}} models",
+  "import_models_title": "Import {{name}} models",
+  "models_import_success": "Models import successfully",
+  "models_import_failed": "Models import failed",
+  "loading": "Loading..."
 }
