feat(data-modeling): 新增记录列表和表单组件
- 添加 RecordForm 和 RecordList 组件- 实现记录创建、编辑和删除功能
- 增加分页和搜索功能
-优化国际化文案
- 调整 API 日志服务接口

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -155,6 +155,23 @@
   "edit_field": "Edit Field",
   "edit_index": "Edit Index",
   "edit_record": "Edit Record",
+  "view_record": "View Record",
+  "create": "Create",
+  "record_created_success": "Record created successfully",
+  "record_updated_success": "Record updated successfully",
+  "record_creation_failed": "Record creation failed",
+  "record_update_failed": "Record update failed",
+  "record_form_title": "{{mode}} {{modelName}} Record",
+  "record_form_create": "New",
+  "record_form_edit": "Edit",
+  "record_form_view": "View",
+  "record_delete_no_id_warning": "Can't delete a record without ID!",
+  "record_edit_no_id_warning": "Can't edit a record without ID!",
+  "record_delete_success": "Record deleted successfully",
+  "record_delete_failed": "Record delete failed",
+  "record_create_failed": "Record create failed",
+  "filter": "Filter",
+  "filter_placeholder": "Enter filter conditions...",
   "fields": "Fields",
   "indexes": "Indexes",
   "field_form_title": "Field Form",
