--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -154,6 +154,23 @@
   "edit_field": "编辑字段",
   "edit_index": "编辑索引",
   "edit_record": "编辑记录",
+  "view_record": "查看记录",
+  "create": "创建",
+  "record_created_success": "记录创建成功",
+  "record_updated_success": "记录更新成功",
+  "record_creation_failed": "记录创建失败",
+  "record_update_failed": "记录更新失败",
+  "record_form_title": "{{mode}} {{modelName}} 记录",
+  "record_form_create": "新建",
+  "record_form_edit": "编辑",
+  "record_form_view": "查看",
+  "record_delete_no_id_warning": "无法删除没有ID的记录！",
+  "record_edit_no_id_warning": "无法编辑没有ID的记录！",
+  "record_delete_success": "记录删除成功",
+  "record_delete_failed": "记录删除失败",
+  "record_create_failed": "记录创建失败",
+  "filter": "过滤条件",
+  "filter_placeholder": "请输入过滤条件...",
   "fields": "字段列表",
   "indexes": "索引列表",
   "field_form_title": "字段表单",
