feat(DataModeling): 为记录列表添加排序功能
- 在 RecordList 组件中实现表格排序功能
- 更新 getRecordList 服务以支持排序参数
- 在 locales 文件中添加排序相关的翻译字符串

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -407,5 +407,8 @@
   "import_models_title": "Import {{name}} models",
   "models_import_success": "Models import successfully",
   "models_import_failed": "Models import failed",
-  "loading": "Loading..."
+  "loading": "Loading...",
+  "sort_asc": "Sort Ascending",
+  "sort_desc": "Sort Descending",
+  "sort_cancel": "Cancel Sort"
 }
