refactor(data-modeling): 重构字段和索引的创建和编辑功能
- 将字段和索引的创建和编辑逻辑移至 Modal 组件内
- 优化表单结构，提高可读性和易用性
- 添加创建和编辑状态管理，提高用户体验
- 调整样式和布局，使其更加紧凑和美观

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -235,6 +235,8 @@
   "form_delete_fail": "Failed to delete",
   "field_delete_success": "Field deleted successfully",
   "field_delete_failed": "Failed to delete field",
+  "index_delete_success": "Index deleted successfully",
+  "index_delete_failed": "Failed to delete index",
   "app_description": "Make data access easier, more efficient, and more flexible!",
   "pagination_total_text": "{{start}}-{{end}} of {{total}} items",
   "help": "Help",
