--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -234,6 +234,8 @@
   "form_delete_fail": "删除失败",
   "field_delete_success": "字段删除成功",
   "field_delete_failed": "字段删除失败",
+  "index_delete_success": "索引删除成功",
+  "index_delete_failed": "索引删除失败",
   "app_description": "让数据访问更简单、更高效、更灵活！",
   "pagination_total_text": "显示{{start}}-{{end}}条 总共{{total}}条",
   "help": "帮助",
@@ -410,5 +412,30 @@
   "loading": "加载中...",
   "sort_asc": "升序",
   "sort_desc": "降序",
-  "sort_cancel": "取消排序"
+  "sort_cancel": "取消排序",
+  "flow_mgr": "流程管理",
+  "flow_design": "流程设计",
+  "flow_instance": "流程实例监控",
+  "trigger_management": "触发器",
+  "create_trigger": "创建触发器",
+  "edit_trigger": "编辑触发器",
+  "trigger_type_cron": "定时触发",
+  "trigger_type_event": "事件触发",
+  "flow_name": "流程名称",
+  "enter_trigger_name": "请输入触发器名称",
+  "enter_trigger_description": "请输入触发器描述",
+  "select_trigger_type": "请选择触发器类型",
+  "select_flow": "请选择流程",
+  "delete_trigger_confirm_desc": "您确定要删除触发器 <strong>{{name}}</strong> 吗？",
+  "load_triggers_failed": "加载触发器列表失败",
+  "status_updated_success": "状态更新成功",
+  "status_update_failed": "状态更新失败",
+  "pause": "暂停",
+  "start": "启动",
+  "update": "更新",
+  "update_success": "更新成功",
+  "update_failed": "更新失败",
+  "delete_confirm": "确认删除",
+  "active": "启用",
+  "inactive": "禁用"
 }
