refactor(i18n): 更新多语言文案并统一触发器相关术语
- 在 en.json 中添加新的翻译项 "trigger"
- 在 zh.json 中将 "trigger_management" 简化为 "trigger"- 更新 TriggerList 组件和路由配置中的翻译键

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -412,5 +412,6 @@
   "loading": "Loading...",
   "sort_asc": "Sort Ascending",
   "sort_desc": "Sort Descending",
-  "sort_cancel": "Cancel Sort"
+  "sort_cancel": "Cancel Sort",
+  "trigger": "Trigger"
 }
