feat(overview): 添加系统监控功能
- 新增 CPU、内存、线程、磁盘 I/O、网络和 JVM 监控图表- 添加详细的系统信息展示，包括 CPU、内存、系统负载、JVM 信息等
- 实现监控数据的实时加载和错误处理
- 优化监控图表的样式和交互

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -437,5 +437,11 @@
   "update_failed": "更新失败",
   "delete_confirm": "确认删除",
   "active": "启用",
-  "inactive": "禁用"
+  "inactive": "禁用",
+  "cpu_usage": "CPU使用率",
+  "memory_usage": "内存使用情况",
+  "thread_monitoring": "线程监控",
+  "disk_io": "磁盘I/O",
+  "network_monitoring": "网络监控",
+  "jvm_monitoring": "JVM监控"
 }
