feat(overview): 添加系统监控功能
- 在概览页面添加系统监控组件
- 实现 CPU、内存、线程、磁盘、网络和 JVM 监控
- 添加监控数据的图表展示
- 优化监控数据的加载和处理

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -413,5 +413,110 @@
   "sort_asc": "Sort Ascending",
   "sort_desc": "Sort Descending",
   "sort_cancel": "Cancel Sort",
-  "trigger": "Trigger"
+  "trigger": "Trigger",
+  "metrics": {
+    "system_monitoring": "System Monitoring",
+    "system_monitoring_details": "System Monitoring Details",
+    "monitoring_data_load_failed": "Failed to load monitoring data",
+    "loading": "Loading...",
+    "system_overview": "System Summary",
+    "memory": "Physical Memory",
+    "thread": "Thread",
+    "network": "Network",
+    "disk": "Disk",
+    "jvm": "JVM",
+    "cpu_info": "CPU Info",
+    "memory_info": "Memory Info",
+    "system_info": "System Info",
+    "jvm_info": "JVM Info",
+    "process_cpu_usage": "Process CPU Usage",
+    "system_cpu_usage": "System CPU Usage",
+    "available_processors": "Available Processors",
+    "system_architecture": "System Architecture",
+    "total_physical_memory": "Total Physical Memory",
+    "free_physical_memory": "Free Physical Memory",
+    "total_swap_space": "Total Swap Space",
+    "free_swap_space": "Free Swap Space",
+    "operating_system": "Operating System",
+    "system_version": "System Version",
+    "system_load": "System Load",
+    "uptime": "Uptime",
+    "jvm_name": "JVM Name",
+    "jvm_version": "JVM Version",
+    "jvm_vendor": "JVM Vendor",
+    "loaded_classes": "Loaded Classes",
+    "heap_memory": "Heap Memory",
+    "non_heap_memory": "Non-Heap Memory",
+    "memory_pools": "Memory Pools",
+    "initial_size": "Initial Size",
+    "used": "Used",
+    "committed": "Committed",
+    "max_size": "Max Size",
+    "usage_percentage": "Usage Percentage",
+    "unlimited": "Unlimited",
+    "memory_manager": "Memory Manager",
+    "thread_stats": "Thread Stats",
+    "current_threads": "Current Threads",
+    "peak_threads": "Peak Threads",
+    "daemon_threads": "Daemon Threads",
+    "started_threads": "Started Threads",
+    "thread_states": "Thread States",
+    "thread_details": "Thread Details",
+    "blocked_count": "Blocked Count",
+    "waited_count": "Waited Count",
+    "cpu_time": "CPU Time",
+    "user_time": "User Time",
+    "network_stats": "Network Stats",
+    "total_interfaces": "Total Interfaces",
+    "active_interfaces": "Active Interfaces",
+    "hostname": "Hostname",
+    "host_address": "Host Address",
+    "network_interface_details": "Network Interface Details",
+    "display_name": "Display Name",
+    "status": "Status",
+    "online": "Online",
+    "offline": "Offline",
+    "type": "Type",
+    "virtual": "Virtual",
+    "loopback": "Loopback",
+    "point_to_point": "Point to Point",
+    "mac_address": "MAC Address",
+    "address_count": "Address Count",
+    "disk_stats": "Disk Stats",
+    "file_systems": "File Systems",
+    "total_space": "Total Space",
+    "available_space": "Available Space",
+    "free_space": "Free Space",
+    "file_system_details": "File System Details",
+    "jvm_basic_info": "JVM Basic Info",
+    "start_time": "Start Time",
+    "total_loaded_classes": "Total Loaded Classes",
+    "unloaded_classes": "Unloaded Classes",
+    "system_properties": "System Properties",
+    "property_name": "Property Name",
+    "property_value": "Property Value",
+    "garbage_collectors": "Garbage Collectors",
+    "collector_name": "Collector Name",
+    "collection_count": "Collection Count",
+    "collection_time": "Collection Time",
+    "unknown": "Unknown",
+    "minutes": "minutes",
+    "gb": "GB",
+    "mb": "MB",
+    "ms": "ms",
+    "count": "",
+    "kinds": " kinds",
+    "interfaces_count": " interfaces",
+    "active_count": "",
+    "file_systems_count": "",
+    "properties_count": "",
+    "gc_count": "",
+    "monitoring_trend": "Monitoring Trend",
+    "system_monitoring_trend": "System Monitoring Trend",
+    "memory_monitoring_trend": "Memory Monitoring Trend",
+    "thread_monitoring_trend": "Thread Monitoring Trend",
+    "disk_io_monitoring_trend": "Disk I/O Monitoring Trend",
+    "network_monitoring_trend": "Network Monitoring Trend",
+    "jvm_monitoring_trend": "JVM Monitoring Trend"
+  }
 }
