--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -443,5 +443,110 @@
   "thread_monitoring": "线程监控",
   "disk_io": "磁盘I/O",
   "network_monitoring": "网络监控",
-  "jvm_monitoring": "JVM监控"
+  "jvm_monitoring": "JVM监控",
+  "metrics": {
+    "system_monitoring": "系统监控",
+    "system_monitoring_details": "系统监控详情",
+    "monitoring_data_load_failed": "监控数据加载失败",
+    "loading": "加载中...",
+    "system_overview": "系统概览",
+    "memory": "物理内存",
+    "thread": "线程",
+    "network": "网络",
+    "disk": "磁盘",
+    "jvm": "JVM",
+    "cpu_info": "CPU信息",
+    "memory_info": "内存信息",
+    "system_info": "系统信息",
+    "jvm_info": "JVM信息",
+    "process_cpu_usage": "进程CPU使用率",
+    "system_cpu_usage": "系统CPU使用率",
+    "available_processors": "可用处理器",
+    "system_architecture": "系统架构",
+    "total_physical_memory": "总物理内存",
+    "free_physical_memory": "空闲物理内存",
+    "total_swap_space": "总交换空间",
+    "free_swap_space": "空闲交换空间",
+    "operating_system": "操作系统",
+    "system_version": "系统版本",
+    "system_load": "系统负载",
+    "uptime": "运行时间",
+    "jvm_name": "JVM名称",
+    "jvm_version": "JVM版本",
+    "jvm_vendor": "JVM厂商",
+    "loaded_classes": "已加载类",
+    "heap_memory": "堆内存",
+    "non_heap_memory": "非堆内存",
+    "memory_pools": "内存池",
+    "initial_size": "初始大小",
+    "used": "已使用",
+    "committed": "已提交",
+    "max_size": "最大大小",
+    "usage_percentage": "使用率",
+    "unlimited": "无限制",
+    "memory_manager": "内存管理器",
+    "thread_stats": "线程统计",
+    "current_threads": "当前线程数",
+    "peak_threads": "峰值线程数",
+    "daemon_threads": "守护线程数",
+    "started_threads": "已启动线程数",
+    "thread_states": "线程状态",
+    "thread_details": "线程详情",
+    "blocked_count": "阻塞次数",
+    "waited_count": "等待次数",
+    "cpu_time": "CPU时间",
+    "user_time": "用户时间",
+    "network_stats": "网络统计",
+    "total_interfaces": "总接口数",
+    "active_interfaces": "活跃接口数",
+    "hostname": "主机名",
+    "host_address": "主机地址",
+    "network_interface_details": "网络接口详情",
+    "display_name": "显示名称",
+    "status": "状态",
+    "online": "在线",
+    "offline": "离线",
+    "type": "类型",
+    "virtual": "虚拟",
+    "loopback": "回环",
+    "point_to_point": "点对点",
+    "mac_address": "MAC地址",
+    "address_count": "地址数",
+    "disk_stats": "磁盘统计",
+    "file_systems": "文件系统数",
+    "total_space": "总空间",
+    "available_space": "可用空间",
+    "free_space": "空闲空间",
+    "file_system_details": "文件系统详情",
+    "jvm_basic_info": "JVM基本信息",
+    "start_time": "启动时间",
+    "total_loaded_classes": "总加载类",
+    "unloaded_classes": "已卸载类",
+    "system_properties": "系统属性",
+    "property_name": "属性名称",
+    "property_value": "属性值",
+    "garbage_collectors": "垃圾收集器",
+    "collector_name": "收集器名称",
+    "collection_count": "收集次数",
+    "collection_time": "收集时间",
+    "unknown": "未知",
+    "minutes": "分钟",
+    "gb": "GB",
+    "mb": "MB",
+    "ms": "ms",
+    "count": "个",
+    "kinds": "种",
+    "interfaces_count": "个接口",
+    "active_count": "个",
+    "file_systems_count": "个",
+    "properties_count": "个",
+    "gc_count": "个",
+    "monitoring_trend": "监控趋势",
+    "system_monitoring_trend": "系统监控趋势",
+    "memory_monitoring_trend": "内存监控趋势",
+    "thread_monitoring_trend": "线程监控趋势",
+    "disk_io_monitoring_trend": "磁盘I/O监控趋势",
+    "network_monitoring_trend": "网络监控趋势",
+    "jvm_monitoring_trend": "JVM监控趋势"
+  }
 }
