refactor(overview): 重构系统监控页面文案和数据展示
- 修改系统概览相关文案，增加系统平均负载指标
- 优化内存展示逻辑，区分物理内存和总内存
- 调整 CPU 使用率展示方式，保留小数点后一位
- 统一网络接口称谓，改为"网卡"
- 更新相关测试用例和国际化文件

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -419,8 +419,9 @@
     "system_monitoring_details": "System Monitoring Details",
     "monitoring_data_load_failed": "Failed to load monitoring data",
     "loading": "Loading...",
-    "system_overview": "System Summary",
-    "memory": "Physical Memory",
+    "system_summary": "System Summary",
+    "memory": "Memory",
+    "physical_memory": "Physical Memory",
     "thread": "Thread",
     "network": "Network",
     "disk": "Disk",
@@ -429,6 +430,7 @@
     "memory_info": "Memory Info",
     "system_info": "System Info",
     "jvm_info": "JVM Info",
+    "system_load_average": "System Load Average",
     "process_cpu_usage": "Process CPU Usage",
     "system_cpu_usage": "System CPU Usage",
     "available_processors": "Available Processors",
