--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -449,8 +449,9 @@
     "system_monitoring_details": "系统监控详情",
     "monitoring_data_load_failed": "监控数据加载失败",
     "loading": "加载中...",
-    "system_overview": "系统概览",
-    "memory": "物理内存",
+    "system_summary": "系统概览",
+    "memory": "内存",
+    "physical_memory": "物理内存",
     "thread": "线程",
     "network": "网络",
     "disk": "磁盘",
@@ -459,6 +460,7 @@
     "memory_info": "内存信息",
     "system_info": "系统信息",
     "jvm_info": "JVM信息",
+    "system_load_average": "系统平均负载",
     "process_cpu_usage": "进程CPU使用率",
     "system_cpu_usage": "系统CPU使用率",
     "available_processors": "可用处理器",
@@ -497,11 +499,11 @@
     "cpu_time": "CPU时间",
     "user_time": "用户时间",
     "network_stats": "网络统计",
-    "total_interfaces": "总接口数",
-    "active_interfaces": "活跃接口数",
+    "total_interfaces": "总网卡数",
+    "active_interfaces": "活跃网卡数",
     "hostname": "主机名",
     "host_address": "主机地址",
-    "network_interface_details": "网络接口详情",
+    "network_interface_details": "网卡详情",
     "display_name": "显示名称",
     "status": "状态",
     "online": "在线",
