refactor(i18n):优化国际化文案并移除未使用的翻译项
- 移除了英语和中文文件中多个未使用的翻译项
- 调整了部分翻译项的表述方式，使其更加准确
- 统一了"interfaces_count"的翻译为"个网卡"

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -486,7 +486,6 @@
     "usage_percentage": "使用率",
     "unlimited": "无限制",
     "memory_manager": "内存管理器",
-    "thread_stats": "线程统计",
     "current_threads": "当前线程数",
     "peak_threads": "峰值线程数",
     "daemon_threads": "守护线程数",
@@ -502,7 +501,6 @@
     "active_interfaces": "活跃网卡数",
     "hostname": "主机名",
     "host_address": "主机地址",
-    "network_interface_details": "网卡详情",
     "display_name": "显示名称",
     "status": "状态",
     "online": "在线",
@@ -513,12 +511,10 @@
     "point_to_point": "点对点",
     "mac_address": "MAC地址",
     "address_count": "地址数",
-    "disk_stats": "磁盘统计",
     "file_systems": "文件系统数",
     "total_space": "总空间",
     "available_space": "可用空间",
     "free_space": "空闲空间",
-    "file_system_details": "文件系统详情",
     "jvm_basic_info": "JVM基本信息",
     "start_time": "启动时间",
     "total_loaded_classes": "总加载类",
@@ -526,7 +522,6 @@
     "system_properties": "系统属性",
     "property_name": "属性名称",
     "property_value": "属性值",
-    "garbage_collectors": "垃圾收集器",
     "collector_name": "收集器名称",
     "collection_count": "收集次数",
     "collection_time": "收集时间",
@@ -537,7 +532,7 @@
     "ms": "ms",
     "count": "个",
     "kinds": "种",
-    "interfaces_count": "个接口",
+    "interfaces_count": "个网卡",
     "active_count": "个",
     "file_systems_count": "个",
     "properties_count": "个",
