feat(trigger): 新增触发器功能
- 添加触发器列表和表单组件
- 实现间隔触发、Cron触发和事件触发等三种触发形式
- 增加触发器配置相关类型定义- 更新多语言文案

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -414,6 +414,43 @@
   "sort_desc": "Sort Descending",
   "sort_cancel": "Cancel Sort",
   "trigger": "Trigger",
+  "trigger_form": "Trigger Form",
+  "trigger_form_interval": "Interval Trigger",
+  "trigger_form_cron": "Cron Expression",
+  "trigger_form_daily_time_interval": "Daily Time Range",
+  "select_trigger_form": "Please select trigger form",
+  "select_flow": "Please select execute action",
+  "interval_trigger": "Interval Trigger",
+  "cron_trigger": "Cron Trigger",
+  "daily_time_interval_trigger": "Daily Time Interval Trigger",
+  "repeat_interval": "Repeat Interval",
+  "repeat_count": "Repeat Count",
+  "repeat_forever": "Repeat Forever",
+  "cron_expression": "Cron Expression",
+  "cron_expression_placeholder": "Enter cron expression, e.g.: 0 0 12 * * ?",
+  "cron_expression_help": "Cron format: second minute hour day month week",
+  "interval_unit": "Interval Unit",
+  "interval_value": "Interval Value",
+  "interval_seconds": "Seconds",
+  "interval_minutes": "Minutes",
+  "interval_hours": "Hours",
+  "interval_days": "Days",
+  "interval_weeks": "Weeks",
+  "interval_months": "Months",
+  "interval_years": "Years",
+  "start_time": "Start Time",
+  "end_time": "End Time",
+  "time_range": "Time Range",
+  "days_of_week": "Days of Week",
+  "monday": "Monday",
+  "tuesday": "Tuesday",
+  "wednesday": "Wednesday",
+  "thursday": "Thursday",
+  "friday": "Friday",
+  "saturday": "Saturday",
+  "sunday": "Sunday",
+  "timezone": "Timezone",
+  "timezone_placeholder": "Please select timezone",
   "metrics": {
     "system_monitoring": "System Monitoring",
     "monitoring_data_load_failed": "Failed to load monitoring data",
@@ -514,5 +551,16 @@
     "disk_io_monitoring_trend": "Disk I/O Monitoring Trend",
     "network_monitoring_trend": "Network Monitoring Trend",
     "jvm_monitoring_trend": "JVM Monitoring Trend"
-  }
+  },
+  "model": "Model",
+  "select_model": "Select Model",
+  "mutation_types": "Mutation Types",
+  "select_mutation_types": "Select Mutation Types",
+  "mutation_create": "Create",
+  "mutation_update": "Update",
+  "mutation_delete": "Delete",
+  "trigger_timing": "Trigger Timing",
+  "trigger_timing_before": "Before",
+  "trigger_timing_after": "After",
+  "event_trigger_config": "Event Trigger Configuration"
 }
