--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -421,11 +421,47 @@
   "edit_trigger": "编辑触发器",
   "trigger_type_cron": "定时触发",
   "trigger_type_event": "事件触发",
+  "trigger_form": "触发形式",
+  "trigger_form_interval": "间隔触发",
+  "trigger_form_cron": "Cron表达式",
+  "trigger_form_daily_time_interval": "每日时间段",
+  "select_trigger_form": "请选择触发形式",
+  "interval_trigger": "间隔触发",
+  "cron_trigger": "Cron触发",
+  "daily_time_interval_trigger": "每日时间间隔触发",
+  "repeat_interval": "重复间隔",
+  "repeat_count": "重复次数",
+  "repeat_forever": "无限重复",
+  "cron_expression": "Cron表达式",
+  "cron_expression_placeholder": "请输入Cron表达式，如：0 0 12 * * ?",
+  "cron_expression_help": "Cron表达式格式：秒 分 时 日 月 周",
+  "interval_unit": "间隔单位",
+  "interval_value": "间隔值",
+  "interval_seconds": "秒",
+  "interval_minutes": "分钟",
+  "interval_hours": "小时",
+  "interval_days": "天",
+  "interval_weeks": "周",
+  "interval_months": "月",
+  "interval_years": "年",
+  "start_time": "开始时间",
+  "end_time": "结束时间",
+  "time_range": "时间范围",
+  "days_of_week": "星期几",
+  "monday": "星期一",
+  "tuesday": "星期二",
+  "wednesday": "星期三",
+  "thursday": "星期四",
+  "friday": "星期五",
+  "saturday": "星期六",
+  "sunday": "星期日",
+  "timezone": "时区",
+  "timezone_placeholder": "请选择时区",
   "flow_name": "流程名称",
   "enter_trigger_name": "请输入触发器名称",
   "enter_trigger_description": "请输入触发器描述",
   "select_trigger_type": "请选择触发器类型",
-  "select_flow": "请选择流程",
+  "select_flow": "请选择执行动作",
   "delete_trigger_confirm_desc": "您确定要删除触发器 <strong>{{name}}</strong> 吗？",
   "load_triggers_failed": "加载触发器列表失败",
   "status_updated_success": "状态更新成功",
@@ -544,5 +580,16 @@
     "disk_io_monitoring_trend": "磁盘I/O监控趋势",
     "network_monitoring_trend": "网络监控趋势",
     "jvm_monitoring_trend": "JVM监控趋势"
-  }
+  },
+  "model": "模型",
+  "select_model": "选择模型",
+  "mutation_types": "变更类型",
+  "select_mutation_types": "选择变更类型",
+  "mutation_create": "新增",
+  "mutation_update": "修改",
+  "mutation_delete": "删除",
+  "trigger_timing": "触发时机",
+  "trigger_timing_before": "之前",
+  "trigger_timing_after": "之后",
+  "event_trigger_config": "事件触发配置"
 }
