``` refactor(translation): 重构触发器相关翻译和组件
将触发器相关的翻译项从扁平结构改为嵌套结构，并更新了TriggerForm和TriggerList组件以使用新的翻译路径。同时，对部分代码进行了格式调整以保持一致性。- 将`en.json`和`zh.json`中的触发器相关翻译项嵌套在`trigger`对象下。
- 更新`TriggerForm.tsx`中使用的翻译路径，以匹配新的嵌套结构。
- 在`TriggerList.tsx`中添加分页功能，并更新了表格列的标题和操作按钮的翻译路径。
- 更新`types/trigger.ts`中的选项标签，使其引用新的嵌套翻译路径。
- 调整了一些代码格式，如空格和换行，以提高代码可读性。
```

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -413,44 +413,84 @@
   "sort_asc": "Sort Ascending",
   "sort_desc": "Sort Descending",
   "sort_cancel": "Cancel Sort",
-  "trigger": "Trigger",
-  "trigger_form": "Trigger Form",
-  "trigger_form_interval": "Interval Trigger",
-  "trigger_form_cron": "Cron Expression",
-  "trigger_form_daily_time_interval": "Daily Time Range",
-  "select_trigger_form": "Please select trigger form",
-  "select_flow": "Please select execute action",
-  "interval_trigger": "Interval Trigger",
-  "cron_trigger": "Cron Trigger",
-  "daily_time_interval_trigger": "Daily Time Interval Trigger",
-  "repeat_interval": "Repeat Interval",
-  "repeat_count": "Repeat Count",
-  "repeat_forever": "Repeat Forever",
-  "cron_expression": "Cron Expression",
-  "cron_expression_placeholder": "Enter cron expression, e.g.: 0 0 12 * * ?",
-  "cron_expression_help": "Cron format: second minute hour day month week",
-  "interval_unit": "Interval Unit",
-  "interval_value": "Interval Value",
-  "interval_seconds": "Seconds",
-  "interval_minutes": "Minutes",
-  "interval_hours": "Hours",
-  "interval_days": "Days",
-  "interval_weeks": "Weeks",
-  "interval_months": "Months",
-  "interval_years": "Years",
-  "start_time": "Start Time",
-  "end_time": "End Time",
-  "time_range": "Time Range",
-  "days_of_week": "Days of Week",
-  "monday": "Monday",
-  "tuesday": "Tuesday",
-  "wednesday": "Wednesday",
-  "thursday": "Thursday",
-  "friday": "Friday",
-  "saturday": "Saturday",
-  "sunday": "Sunday",
-  "timezone": "Timezone",
-  "timezone_placeholder": "Please select timezone",
+  "flow_mgr": "Flow Management",
+  "flow_design": "Flow Design",
+  "flow_instance": "Flow Instance Monitoring",
+  "trigger": {
+    "title": "Trigger",
+    "create": "Create Trigger",
+    "edit": "Edit Trigger",
+    "type_cron": "Scheduled Trigger",
+    "type_event": "Event Trigger",
+    "form": "Trigger Form",
+    "form_interval": "Interval Trigger",
+    "form_cron": "Cron Expression",
+    "form_daily_time_interval": "Daily Time Range",
+    "select_form": "Please select trigger form",
+    "interval_trigger": "Interval Trigger",
+    "cron_trigger": "Cron Trigger",
+    "daily_time_interval_trigger": "Daily Time Interval Trigger",
+    "enter_name": "Please enter trigger name",
+    "enter_description": "Please enter trigger description",
+    "select_type": "Please select trigger type",
+    "delete_confirm_desc": "Are you sure to delete trigger <strong>{{name}}</strong>?",
+    "load_failed": "Failed to load trigger list",
+    "timing": "Trigger Timing",
+    "timing_before": "Before",
+    "timing_after": "After",
+    "event_config": "Event Trigger Configuration",
+    "cron_expression": "Cron Expression",
+    "cron_expression_placeholder": "Enter cron expression, e.g.: 0 0 12 * * ?",
+    "cron_expression_help": "Cron format: second minute hour day month week",
+    "interval_unit": "Interval Unit",
+    "interval_value": "Interval Value",
+    "interval_seconds": "Seconds",
+    "interval_minutes": "Minutes",
+    "interval_hours": "Hours",
+    "interval_days": "Days",
+    "interval_weeks": "Weeks",
+    "interval_months": "Months",
+    "interval_years": "Years",
+    "repeat_interval": "Repeat Interval",
+    "repeat_count": "Repeat Count",
+    "repeat_forever": "Repeat Forever",
+    "start_time": "Start Time",
+    "end_time": "End Time",
+    "days_of_week": "Days of Week",
+    "monday": "Monday",
+    "tuesday": "Tuesday",
+    "wednesday": "Wednesday",
+    "thursday": "Thursday",
+    "friday": "Friday",
+    "saturday": "Saturday",
+    "sunday": "Sunday",
+    "timezone": "Timezone",
+    "timezone_placeholder": "Please select timezone",
+    "mutation_types": "Mutation Types",
+    "select_mutation_types": "Select Mutation Types",
+    "mutation_create": "Create",
+    "mutation_update": "Update",
+    "mutation_delete": "Delete",
+    "time_range": "Time Range",
+    "flow_name": "Flow Name",
+    "select_flow": "Please select execute action"
+  },
+  "status_updated_success": "Status updated successfully",
+  "status_update_failed": "Status update failed",
+  "pause": "Pause",
+  "start": "Start",
+  "update": "Update",
+  "update_success": "Update successful",
+  "update_failed": "Update failed",
+  "delete_confirm": "Confirm Delete",
+  "active": "Active",
+  "inactive": "Inactive",
+  "cpu_usage": "CPU Usage",
+  "memory_usage": "Memory Usage",
+  "thread_monitoring": "Thread Monitoring",
+  "disk_io": "Disk I/O",
+  "network_monitoring": "Network Monitoring",
+  "jvm_monitoring": "JVM Monitoring",
   "metrics": {
     "system_monitoring": "System Monitoring",
     "monitoring_data_load_failed": "Failed to load monitoring data",
@@ -554,13 +594,5 @@
   },
   "model": "Model",
   "select_model": "Select Model",
-  "mutation_types": "Mutation Types",
-  "select_mutation_types": "Select Mutation Types",
-  "mutation_create": "Create",
-  "mutation_update": "Update",
-  "mutation_delete": "Delete",
-  "trigger_timing": "Trigger Timing",
-  "trigger_timing_before": "Before",
-  "trigger_timing_after": "After",
-  "event_trigger_config": "Event Trigger Configuration"
+  "description": "描述"
 }
