feat(i18n): 更新国际化文案并添加新字段
- 在 en.json 和 zh.json 中添加了 "status" 字段
-将 "description" 字段的中文翻译统一为 "描述"
-优化了 FlowList 组件的搜索和新建流程布局
- 重构了 TriggerForm 组件的样式，使用 Divider 替代 Card 标题

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -594,5 +594,6 @@
   },
   "model": "Model",
   "select_model": "Select Model",
-  "description": "描述"
+  "description": "Description",
+  "status": "Status"
 }
